Add Fragments / Add Loading Animation

--- a/dynamicload-library/build.gradle
+++ b/dynamicload-library/build.gradle
@@ -1,17 +1,15 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "comicdoor.comicdoor"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -21,10 +19,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'br.com.liveo:navigationdrawer-material:2.5.1' //Apache License
-    compile 'com.android.support:support-v4:24.0.0'
-    compile project(':loadingdrawable-library')  //Apache License
 }
